# Build-Blocks-Collections

./: README.md  pyproject.toml
config_files/: bat_config
deploy_files/docker_files/: Dockerfile_two_stages_python_fastapi_with_poetry
utils/classification/: metric_utils.py
utils/dataframe/: dataframe_utils_general.py
utils/nlp/: dataframe_utils_nlp.py  text_formatter.py
utils/nlp/examples/: example_text_formatter.ipynb
