[tool.poetry]
name = "build-blocks-collections"
version = "0.1.0"
description = ""
authors = ["PauloMarvin <paulo.marving@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
